--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,13 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
+@media (max-width: 576px) {
+  h1 {
+    line-height: 1.5;
+    font-size: 48px;
+  }
+}
+
 body {
   margin: 50px auto;
 }
